src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Send_Secure_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag will initiate sending an email notification to the member letting them know that a case (update) is available through the PC Access portal.</description>
        <inlineHelpText>This flag will initiate sending an email notification to the member letting them know that a case (update) is available through the PC Access portal.</inlineHelpText>
        <label>Send Secure Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Special_Instructions__c</fullName>
        <description>Card Services ATM/Debit special instructions</description>
        <label>Special Instructions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Expedited</fullName>
                </value>
                <value>
                    <fullName>Alternate Delivery Address</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
                <value>
                    <fullName>Travel Notification</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Staff_Escalated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Use this field to manually escalate a case</description>
        <inlineHelpText>Use this field to manually escalate a case for further assistance</inlineHelpText>
        <label>Staff Escalated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address_1__c</fullName>
        <label>Street Address 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address_2__c</fullName>
        <label>Street Address 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Status__c</fullName>
        <label>Sub Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Documents Sent</fullName>
                </value>
                <value>
                    <fullName>Documents Pending</fullName>
                </value>
                <value>
                    <fullName>Documents Signed</fullName>
                </value>
                <value>
                    <fullName>Waiting For Member</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>No Response</fullName>
                </value>
                <value>
                    <fullName>Day1 Started</fullName>
                </value>
                <value>
                    <fullName>Day2 Started</fullName>
                </value>
                <value>
                    <fullName>Day14 Started</fullName>
                </value>
                <value>
                    <fullName>Day25 Started</fullName>
                </value>
                <value>
                    <fullName>Day60 Started</fullName>
                </value>
                <value>
                    <fullName>Day90 Started</fullName>
                </value>
                <value>
                    <fullName>Dispute</fullName>
                </value>
                <value>
                    <fullName>Research Dispute</fullName>
                </value>
                <value>
                    <fullName>Claim Accepted</fullName>
                </value>
                <value>
                    <fullName>Fraud</fullName>
                </value>
                <value>
                    <fullName>Research Fraud</fullName>
                </value>
                <value>
                    <fullName>Claim Denied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Support_Contact_Details__c</fullName>
        <label>Support Contact Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tertiary_Category__c</fullName>
        <label>Tertiary Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Secondary_Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>A2A/P2P</fullName>
                </value>
                <value>
                    <fullName>A2A Inquiry</fullName>
                </value>
                <value>
                    <fullName>A2A Other</fullName>
                </value>
                <value>
                    <fullName>A2A System Issue</fullName>
                </value>
                <value>
                    <fullName>Account Balance</fullName>
                </value>
                <value>
                    <fullName>ACH - Authorization for Debit</fullName>
                </value>
                <value>
                    <fullName>ACH Maintenance</fullName>
                </value>
                <value>
                    <fullName>ACH Payoff Request</fullName>
                </value>
                <value>
                    <fullName>ACH Stop Payment</fullName>
                </value>
                <value>
                    <fullName>Activate</fullName>
                </value>
                <value>
                    <fullName>AD&amp;D</fullName>
                </value>
                <value>
                    <fullName>Add a Name</fullName>
                </value>
                <value>
                    <fullName>Address &amp; Contact Info</fullName>
                </value>
                <value>
                    <fullName>Address and Contact Information Change</fullName>
                </value>
                <value>
                    <fullName>Address Change</fullName>
                </value>
                <value>
                    <fullName>Amendments</fullName>
                </value>
                <value>
                    <fullName>Application Inquiries</fullName>
                </value>
                <value>
                    <fullName>Application Issues</fullName>
                </value>
                <value>
                    <fullName>Application Request</fullName>
                </value>
                <value>
                    <fullName>Application Status</fullName>
                </value>
                <value>
                    <fullName>Arbitration Opt Out Letters</fullName>
                </value>
                <value>
                    <fullName>ATM/Debit Card Inquiry</fullName>
                </value>
                <value>
                    <fullName>ATM Locations</fullName>
                </value>
                <value>
                    <fullName>Authorization For Automatic Transfers</fullName>
                </value>
                <value>
                    <fullName>Authorization for Auto Transfer</fullName>
                </value>
                <value>
                    <fullName>Authorization to release</fullName>
                </value>
                <value>
                    <fullName>Authorized Signer</fullName>
                </value>
                <value>
                    <fullName>Automatic Transfer Form</fullName>
                </value>
                <value>
                    <fullName>Automatic Transfers</fullName>
                </value>
                <value>
                    <fullName>Auto Payment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TimePart__c</fullName>
        <description>To extract time only from created date</description>
        <formula>IF ( DATEVALUE(CreatedDate) &gt;= 
DATE ( YEAR (DATEVALUE(CreatedDate)),3,1) 
+ 
( 
14- 
CASE( MOD(DATE ( YEAR (DATEVALUE(CreatedDate)),3,1) - DATE (1900,1,7),7) , 
0,7,MOD(DATE ( YEAR (DATEVALUE(CreatedDate)),3,1) - DATE (1900,1,7),7)) 
) 
&amp;&amp; 
DATEVALUE(CreatedDate) &lt; 
DATE ( YEAR (DATEVALUE(CreatedDate)),11,1) 
+ 
( 
7- 
CASE( MOD(DATE ( YEAR (DATEVALUE(CreatedDate)),11,1) - DATE (1900,1,7),7) , 
0,7,MOD(DATE ( YEAR (DATEVALUE(CreatedDate)),11,1) - DATE (1900,1,7),7)) 
), 
if(Value(Mid(TEXT(CreatedDate- 7/24 ), 12,2))-12 &gt;= 0, 
 Case(Value(Mid(TEXT(CreatedDate- 7/24), 12, 2)), 12, &quot;12&quot;&amp; Mid(TEXT(CreatedDate- 7/24), 14,3)&amp; &quot; PM&quot; , Text(Value(Mid(TEXT(CreatedDate- 7/24), 12, 2))-12) &amp; Mid(TEXT(CreatedDate- 7/24), 14, 3) &amp; &quot; PM&quot;), 
 Case(Value(Mid(TEXT(CreatedDate- 7/24), 12, 2)), 0, &quot;12&quot;&amp; Mid(TEXT(CreatedDate- 7/24), 14,3)&amp; &quot; AM&quot; , Mid(TEXT(CreatedDate- 7/24), 12,5)&amp; &quot; AM&quot;)), 

if(Value(Mid(TEXT(CreatedDate- 8/24 ), 12,2))-12 &gt;= 0, 
 Case(Value(Mid(TEXT(CreatedDate- 8/24), 12,2)), 12, &quot;12&quot; &amp; Mid(TEXT(CreatedDate- 8/24), 14,3)&amp; &quot; PM&quot;, Text(Value(Mid(TEXT(CreatedDate- 8/24), 12, 2))-12) &amp; Mid(TEXT(CreatedDate- 8/24), 14, 3) &amp; &quot; PM&quot;),
 Case(Value(Mid(TEXT(CreatedDate- 8/24), 12, 2)), 0, &quot;12&quot; &amp; Mid(TEXT(CreatedDate- 8/24), 14,3)&amp; &quot; AM&quot; , Mid(TEXT(CreatedDate- 8/24), 12,5)&amp; &quot; AM&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TimePart</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnreadMemberComments__c</fullName>
        <formula>New_Member_Comments__c  &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unread Member Comments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Update_Check__c</fullName>
        <description>This field is used to bypass a process builder / case trigger issue. The rules that prevent survey cases from being edited by anyone other than the managers public group or current owner were causing an error when coming back to update the case information for ownership log info. This fix allows the user(process builder flow) to make the update after the case is technically no longer owned by them and they are not in the public group. It just provides a brief window (5 or 10 seconds) that the case can be edited after the last modification.</description>
        <formula>(NOW()-LastModifiedDate)*24*60*60 &lt; 10</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Update Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>ZipCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>testSLA__c</fullName>
        <defaultValue>1</defaultValue>
        <label>testSLA</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>test__c</fullName>
        <label>test</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wcode01__c</fullName>
        <formula>IF(Account_Number__r.WARNING_01_CODE__c == &apos;01-Delinquent Loan&apos;,
   IMAGE(&quot;/servlet/servlet.ImageServer?id=015g0000000dTYp&amp;oid=00Dg0000006Tnm5&amp;lastMod=1445538127000&quot;, &quot;CFCULogo&quot;, 35, 35 ),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>wcode01</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>Active_Secure_Email_Cases</fullName>
        <booleanFilter>(3 AND 1 ) OR 2</booleanFilter>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Account_Number__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Category__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>MemberCommentCount__c</columns>
        <columns>Last_Comment__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <columns>OWNER_NAME</columns>
        <columns>Created_by_Portal_Member__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>Last_Comment__c</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <filters>
            <field>Created_by_Portal_Member__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Secure Email Cases</label>
        <sharedTo>
            <group>Demo_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Account_Number__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Category__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <columns>Future_Date__c</columns>
        <columns>Open_Task_Count__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Cases</label>
    </listViews>
    <listViews>
        <fullName>All_Closed_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Account_Number__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Category__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>All Closed Cases</label>
    </listViews>
    <listViews>
        <fullName>All_My_Open_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>Account_Number__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Category__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Future_Date__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>All My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>All_Open_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Account_Number__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Category__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <columns>Future_Date__c</columns>
        <columns>Open_Task_Count__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>All_Open_Cases_with_New_Columns</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CONTACT.LAST_NAME</columns>
        <columns>Primary_Category__c</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>Open_Task_Count__c</columns>
        <columns>Future_Date__c</columns>
        <columns>SLA_Breached__c</columns>
        <columns>SLA__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Open_Task_Count__c</field>
            <operation>greaterThan</operation>
            <value>1</value>
        </filters>
        <label>All Open Cases with New Columns</label>
    </listViews>
    <listViews>
        <fullName>All_Queue_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Account_Number__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Category__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <columns>Future_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OWNER_NAME</field>
            <operation>contains</operation>
            <value>Queue</value>
        </filters>
        <label>All Queue Cases</label>
    </listViews>
    <listViews>
        <fullName>BSA_Analyst_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Account_Number__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Category__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <filterScope>Queue</filterScope>
        <label>BSA Analyst Queue</label>
        <queue>BSA_Analyst</queue>
    </listViews>
    <listViews>
        <fullName>Branch14_1600_Smith_Created_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Future_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>yjoh,jguz,rbar,kses,criv,nbod,mlan,jpet,cdel</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>Branch14 -1600 Smith Created Cases</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Branch_1600_Smith_014</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Branch_14_1600_Smith_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Account_Number__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Category__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <columns>Future_Date__c</columns>
        <filterScope>Queue</filterScope>
        <label>Branch 14 - 1600 Smith Queue</label>
        <queue>Branch_14_1600_Smith</queue>
    </listViews>
    <listViews>
        <fullName>Branch_19_Aramco_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Account_Number__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Category__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <columns>Future_Date__c</columns>
        <filterScope>Queue</filterScope>
        <label>Branch 19 - Aramco Queue</label>
        <queue>Branch_19_Aramco</queue>
    </listViews>
    <listViews>
        <fullName>Branch_19_Aramco_Created_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Future_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>alau</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>Branch 19 – Aramco Created Cases</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Branch_Aramaco_019</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Branch_201_San_Fran_Created_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Future_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>zash,jmil,mpar,anes,jrei</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>Branch 201 – San Fran Created Cases</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Branch_San_Francisco_201</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Branch_201_Spectrum_San_Francisco_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Account_Number__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Category__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <columns>Future_Date__c</columns>
        <columns>Open_Task_Count__c</columns>
        <filterScope>Queue</filterScope>
        <label>Branch 201- Spectrum San Francisco Queue</label>
        <queue>Branch_201_Spectrum_San_Francisco</queue>
    </listViews>
    <listViews>
        <fullName>Branch_202_Spectrum_Hou_Created_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Category__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>SLA_Breached__c</columns>
        <columns>SLA__c</columns>
        <columns>Future_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>dsaa,kpen,tgon,sdel</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>Branch 202 - Spectrum Hou Created Cases</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Branch_Houston_Galleria_202</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Branch_Manager_Houston_Galleria_202</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Regional_Manager_Houston</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Card_Disputes</fullName>
        <active>true</active>
        <businessProcess>Card Disputes</businessProcess>
        <description>Choose this option to create Card Disputes Case</description>
        <label>Card Disputes</label>
    </recordTypes>
    <recordTypes>
        <fullName>Card_Services</fullName>
        <active>true</active>
        <businessProcess>Card Services</businessProcess>
        <description>Choose this option to create Card Services Case</description>
        <label>Card Services</label>
    </recordTypes>
    <recordTypes>
        <fullName>Customer_Portal</fullName>
        <active>true</active>
        <businessProcess>Shared Branch Process</businessProcess>
        <description>Record type for customer portal cases</description>
        <label>Customer Portal</label>
    </recordTypes>
    <recordTypes>
        <fullName>Death_Claims</fullName>
        <active>true</active>
        <businessProcess>Death Claims Process</businessProcess>
        <description>Choose this option to create Death Claim Case.</description>
        <label>Death Claims</label>
    </recordTypes>
    <recordTypes>
        <fullName>Default_EPS</fullName>
        <active>true</active>
        <businessProcess>Default EPS</businessProcess>
        <label>Default EPS</label>
    </recordTypes>
    <recordTypes>
        <fullName>Email2Case</fullName>
        <active>true</active>
        <businessProcess>Operation Services Process</businessProcess>
        <description>Default case record type for cases auto created from email</description>
        <label>Email2Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>Levies</fullName>
        <active>true</active>
        <businessProcess>Levies Process</businessProcess>
        <description>Choose this option to create Levies Case.</description>
        <label>Levies</label>
    </recordTypes>
    <recordTypes>
        <fullName>Onboarding</fullName>
        <active>true</active>
        <businessProcess>Onboarding</businessProcess>
        <description>Onboarding new accounts (2,2,2)</description>
        <label>Onboarding</label>
    </recordTypes>
    <recordTypes>
        <fullName>Operation_Services</fullName>
        <active>true</active>
        <businessProcess>Operation Services Process</businessProcess>
        <description>Choose this option to create Operation services Case.</description>
        <label>Account Servicing</label>
    </recordTypes>
    <recordTypes>
        <fullName>Portal</fullName>
        <active>true</active>
        <businessProcess>Operation Services Process</businessProcess>
        <description>Default record type for customer portal created cases</description>
        <label>Portal</label>
    </recordTypes>
    <recordTypes>
        <fullName>Shared_Branch</fullName>
        <active>true</active>
        <businessProcess>Shared Branching Process</businessProcess>
        <description>Choose this option to create Shared Branch Process Case.</description>
        <label>Shared Branching</label>
    </recordTypes>
    <recordTypes>
        <fullName>Survey_Cases</fullName>
        <active>true</active>
        <businessProcess>Shared Branching Process</businessProcess>
        <label>Survey Cases</label>
    </recordTypes>
    <recordTypes>
        <fullName>eBanking_Check_Hold</fullName>
        <active>true</active>
        <businessProcess>eBanking Check Holds</businessProcess>
        <description>Online banking and mobile banking check holds</description>
        <label>eBanking Check Hold</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CaseClosing</fullName>
        <active>true</active>
        <errorConditionFormula>Owner:Queue.QueueName &lt;&gt; NULL &amp;&amp; ISPICKVAL(Status , &quot;Closed&quot;)</errorConditionFormula>
        <errorMessage>Please Take Ownership before closing a Case</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CaseClosingMCS</fullName>
        <active>true</active>
        <description>Only allow MCS to close cases created by the member</description>
        <errorConditionFormula>Created_by_Portal_Member__c = true &amp;&amp; 
ISPICKVAL(Status , &quot;Closed&quot;) &amp;&amp; 
$Profile.Name &lt;&gt; &quot;Member Communications&quot;  &amp;&amp; 
$Profile.Name &lt;&gt; &quot;CU Customer Community Login&quot; &amp;&amp;
$Profile.Name &lt;&gt; &quot;Messaging center Customers&quot; &amp;&amp;
$Profile.Name &lt;&gt; &quot;CFCU Admin&quot; &amp;&amp;
$UserRole.Name &lt;&gt; &quot;eBranch Manager&quot;</errorConditionFormula>
        <errorMessage>Only the Member Communications team can close a case created by the member.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CaseStatusChangeError</fullName>
        <active>false</active>
        <errorConditionFormula>ISPICKVAL(Status, &quot;In Process&quot;) &amp;&amp;  Owner:Queue.QueueName &lt;&gt; NULL</errorConditionFormula>
        <errorMessage>Cannot change status to &quot;In Process&quot;  when a case is owned by a Queue.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MaritzCX__Prevent_MaritzCX_Case_Update</fullName>
        <active>true</active>
        <description>This validation rule will prevent all the users to modify the case whose response is deleted from the system.</description>
        <errorConditionFormula>IF(NOT(ISBLANK(MaritzCX__ALG_Response_Id__c)), IF(ISCHANGED(MaritzCX__Response_Deleted_From_MaritzCX__c), NOT(MaritzCX__Response_Deleted_From_MaritzCX__c), MaritzCX__Response_Deleted_From_MaritzCX__c), false)</errorConditionFormula>
        <errorMessage>The response that originated this case has been deleted from the MaritzCX platform. As a result, this case cannot be updated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OnboardingCaseClosing</fullName>
        <active>true</active>
        <description>Prevent on boarding cases from manually being closed prior to the last task creation.</description>
        <errorConditionFormula>ISPICKVAL(Secondary_Category__c , &quot;Onboarding&quot;) &amp;&amp; NOT(ISPICKVAL(Sub_Status__c, &quot;Day60 Started&quot;)) &amp;&amp; ISPICKVAL(Status , &quot;Closed&quot;)</errorConditionFormula>
        <errorMessage>New member on boarding day 1 thru day 60 day follow up tasks are automatically created for you. This on boarding case can&apos;t be closed until the day 60 task has been created and completed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ReOpen</fullName>
        <active>true</active>
        <description>Requires a case be closed before it can be reopened.</description>
        <errorConditionFormula>AND(
 ISCHANGED(Status),
 ISPICKVAL(Status, &apos;Reopened&apos;),
 NOT(ISPICKVAL(PRIORVALUE(Status), &apos;Closed&apos;))
)</errorConditionFormula>
        <errorMessage>Only Cases in Closed status can be Reopened. Please select a valid status.</errorMessage>
    </validationRules>
</CustomObject>